--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -51,4 +51,8 @@
 	{{- end }}
 
 	<link rel="me authn" href="{{ .Site.Params.emailURL }}" />
+	{{- if .Site.Params.webmentionEnabled }}
+	<link rel="webmention" href="https://webmention.io/{{ .Site.Params.webmentionDomain }}/webmention" />
+	<link rel="pingback" href="https://webmention.io/{{ .Site.Params.webmentionDomain }}/xmlrpc" />
+	{{- end }}
 </head>
