--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -4,6 +4,8 @@
 	</nav>
 </div>
 
+<a class="sr-only" rel="me" href="https://mastodonapp.uk/@mramsden">Mastodon</a>
+
 {{- with .Site.Params.Social -}}
 <script>feather.replace()</script>
 {{- end -}}
