Update Mastodon handle

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -4,7 +4,7 @@
 	</nav>
 </div>
 
-<a class="sr-only" rel="me" href="https://mastodonapp.uk/@mramsden">Mastodon</a>
+<a class="sr-only" rel="me" href="https://hachyderm.io/@mramsden">Mastodon</a>
 
 {{- with .Site.Params.Social -}}
 <script>feather.replace()</script>
